# our-privacy

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/oro_privacy/: __init__.py  anomaly.py  audit.py  domains.py  elevation.py  interface.py  migration.py  provenance.py  types.py  watermark.py
src/oro_privacy/trust/: edges.py  graph_store.py  service.py
src/our_privacy/: __init__.py  canary.py  capabilities.py  corroboration.py  encryption.py  extraction.py  reports.py  sharing.py
src/our_privacy/trust/: federation.py  graph_store.py  service.py
tests/: conftest.py  test_anomaly.py  test_audit.py  test_canary.py  test_capabilities.py  test_corroboration.py  test_domains.py  test_elevation.py  test_encryption.py  test_extraction.py  test_init.py  test_issue_177_hardening.py  test_migration.py  test_provenance.py  test_reports.py  test_sharing.py  test_trust.py  test_trust_4d.py  test_trust_decay.py  test_trust_epistemic.py  test_types.py  test_watch_trust.py  test_watermark.py
