[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oro-privacy"
version = "0.1.0"
description = "Trust graph, capabilities, audit, encryption, and watermarking"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Chris Jacobs" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "oro-db>=0.1.0",
    "cryptography>=41.0",
    "PyJWT>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/oro_privacy"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
per-file-ignores = {"src/oro_privacy/migration.py" = ["E501"]}
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]

[tool.ruff.lint.isort]
known-first-party = ["oro_privacy"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["oro_db", "oro_db.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cryptography", "cryptography.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jwt", "jwt.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require external services)",
    "slow: Slow tests (>5s)",
]

[tool.coverage.run]
branch = true
source = ["src/oro_privacy"]

[tool.coverage.report]
show_missing = true
